# TEMS

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tems/: __init__.py  __main__.py  cli.py  dense_backend.py  fts5_memory.py  korean_utils.py  rebuild_from_qmd.py  scaffold.py  schema.py  tems_engine.py  vector_store.py
src/tems/skill/: SKILL.md
src/tems/skill/references/: tems-architecture.md
src/tems/templates/: audit_dead_state.py  audit_diagnostics_recent.py  compliance_tracker.py  decay.py  gitignore.template  memory_bridge.py  pattern_detector.py  preflight_hook.py  retrospective_hook.py  run_decay_if_due.py  sdc_commit.py  tems_commit.py  tool_failure_hook.py  tool_gate_hook.py
tests/: conftest.py  test_cli.py  test_co_activation_hash.py  test_compliance_reform.py  test_engine_smoke.py  test_find_agent_root.py  test_fts5_idempotency.py  test_fts5_memory.py  test_integration.py  test_qmd_portability.py  test_rebuild.py  test_scaffold.py  test_schema.py  test_supersede_retrieval_filter.py  test_templates.py  test_vector_store_no_placeholder.py
tests/hooks/: conftest.py  test_compliance_tracker.py  test_decay.py  test_memory_bridge.py  test_pattern_detector.py  test_preflight_hook.py  test_retrospective_hook.py  test_tool_failure_hook.py  test_tool_gate_hook.py
